@@ -1,3 +1,9 @@
+Summary of important user-visible changes for statistics 1.1.3:
+-------------------------------------------------------------------
+
+ ** The functions mnpdf and mnrnd are now also usable for greater numbers
+    of categories for which the rows do not exactly sum to 1.
+
 Summary of important user-visible changes for statistics 1.1.2:
 -------------------------------------------------------------------
 
